# AO-SDL

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  LICENSE  README.md  STYLE.md  THIRD_PARTY_LICENSES.md  codecov.yml  imgui.ini  vcpkg-configuration.json  vcpkg.json
apps/kagami/: CMakeLists.txt  CloudWatchSink.h  ConfigReloader.cpp  ConfigReloader.h  ContentConfig.cpp  ContentConfig.h  LogSinkSetup.cpp  LogSinkSetup.h  LokiSink.h  MasterServerAdvertiser.cpp  MasterServerAdvertiser.h  MetricsCollector.cpp  MetricsCollector.h  ProtocolRouter.h  ReplCommand.h  ReplCommandFactory.cpp  ReplCommandFactory.h  ReplCommandRegistrar.h  ServerContext.h  ServerSettings.cpp  ServerSettings.h  TerminalUI.cpp  TerminalUI.h  WsWorkerPool.cpp  WsWorkerPool.h  main.cpp
apps/kagami/commands/: HelpCommand.cpp  ReloadCommand.cpp  SessionsCommand.cpp  StatusCommand.cpp  StopCommand.cpp
apps/kagami/config_sample/: areas.ini  backgrounds.txt  characters.txt  music.json
apps/qt/: AppContext.cpp  AppContext.h  CMakeLists.txt  CharIconProvider.cpp  CharIconProvider.h  EmoteIconProvider.cpp  EmoteIconProvider.h  EngineEventBridge.cpp  EngineEventBridge.h  EngineInterface.cpp  EngineInterface.h  GameViewport.cpp  GameViewport.h  NullScenePresenter.h  QmlUIBridge.cpp  QmlUIBridge.h  QtAppInterface.cpp  QtAppInterface.h  QtDebugContext.h  QtGameWindow.cpp  QtGameWindow.h  QtGameWindow_apple.mm  current_status.md  gpu_preference.cpp  main.cpp  qtgamewindow.cpp  qtgamewindow.h  qtgamewindow.h.autosave
apps/qt/audio/: NullAudioDevice.h
apps/qt/doc/: qml-playground.md
apps/qt/qml/: CharSelectScreen.qml  CourtroomScreen.qml  DummyScreen.qml  Main.qml  ServerListScreen.qml  main.qml
apps/qt/qml/components/: AccordionDrawer.qml  AccordionSection.qml  ChatPanel.qml  DebugOverlay.qml  DisconnectModal.qml  DockPanel.qml  EmoteSelector.qml  EvidencePanel.qml  ExpandingBox.qml  HealthBars.qml  ICChatInput.qml  ICLogPanel.qml  MessageOptions.qml  MusicArea.qml  OverlayPanel.qml  PlayerList.qml  SideSelect.qml  TimerDisplay.qml  UndockablePanel.qml
apps/qt/qml/panels/: DebugOverlay.qml  DisconnectModal.qml  EmoteSelectorPanel.qml  EvidencePanel.qml  GameViewport.qml  HealthBarDisplay.qml  HealthPanel.qml  ICInputPanel.qml  ICLogPanel.qml  MusicAreaPanel.qml  (+5 more)
apps/qt/render/: GLRenderBackend.cpp  IQtRenderBackend.h  MetalRenderBackend.mm  QtRenderProfiler.cpp  QtRenderProfiler.h  RenderBridge.cpp  RenderBridge.h  RenderThread.cpp  RenderThread.h  SceneTextureItem.cpp  SceneTextureItem.h  SceneTextureItem_apple.mm
apps/qt/renderer/: GLBackend.cpp  IGPUBackend.h
apps/qt/samples/: AccordionShowcase.qml  ColorPalette.qml  DashboardCards.qml  OverlayStack.qml
apps/qt/tests/: CMakeLists.txt  tst_char_list_model.cpp  tst_chat_model.cpp  tst_emote_model.cpp  tst_evidence_model.cpp  tst_iclog_model.cpp  tst_music_area_model.cpp  tst_player_list_model.cpp  tst_server_list_model.cpp
apps/qt/ui/: CachePreviewProvider.cpp  CachePreviewProvider.h  CharIconProvider.cpp  CharIconProvider.h  EmoteIconProvider.cpp  EmoteIconProvider.h  QtImageWatcher.cpp  QtImageWatcher.h  QtUIRenderer.cpp  QtUIRenderer.h
apps/sdl/: CMakeLists.txt  IGPUBackend.h  ImGuiUIRenderer.cpp  ImGuiUIRenderer.h  MetalBackend.mm  SDLGameWindow.cpp  SDLGameWindow.h  main.cpp
apps/sdl/audio/: SDLAudioDevice.cpp  SDLAudioDevice.h
apps/sdl/render/: GLBackend.cpp  IGPUBackend.h  MetalBackend.mm
apps/sdl/ui/: DebugContext.h  IWidget.h  ImGuiUIRenderer.cpp  ImGuiUIRenderer.h  LogBuffer.h
tests/: CMakeLists.txt
tests/ao/asset/: test_AOAssetLibrary.cpp  test_AOCharacterSheet.cpp
tests/ao/event/: test_ICMessageEvent.cpp
tests/ao/game/: test_AOBackground.cpp  test_AOCourtroomPresenter.cpp  test_AOEmotePlayer.cpp  test_AOTextBox.cpp  test_ICMessageQueue.cpp  test_SceneEffects.cpp
tests/ao/net/: test_AOClient.cpp  test_AOPacket.cpp  test_AOServer.cpp  test_NewPackets.cpp  test_PacketTypes.cpp
tests/ao/ui/: test_MusicAreaWidget.cpp  test_Screens.cpp
tests/asset/: test_ApngDecoder.cpp  test_AssetCache.cpp  test_AssetLibrary.cpp  test_ImageDecoders.cpp  test_MountDirectory.cpp  test_MountHttp.cpp  test_MountManager.cpp
tests/audio/: test_AudioStream.cpp
tests/configuration/: test_IConfiguration.cpp  test_JsonConfiguration.cpp  test_ServerSettings.cpp
tests/event/: test_BackgroundEvent.cpp  test_EventChannel.cpp  test_EventManager.cpp  test_EventTypes.cpp
tests/game/: test_ACLFlags.cpp  test_ASNReputationManager.cpp  test_BanDuration.cpp  test_BanManager.cpp  test_DatabaseManager.cpp  test_FirewallManager.cpp  test_IPReputationService.cpp  test_ServerList.cpp  test_Session.cpp  test_SpamDetector.cpp  test_TickProfiler.cpp
tests/moderation/: test_BadHintLayer.cpp  test_ContentModerator.cpp  test_LocalClassifierLayer.cpp  test_ModerationHeat.cpp  test_ModerationTrace.cpp  test_RemoteClassifier.cpp  test_RemoteDedupCache.cpp  test_SafeHintLayer.cpp  test_SemanticClusterer.cpp  test_SlurFilter.cpp  test_UnicodeClassifier.cpp  test_UrlExtractor.cpp
tests/net/: MockTcpSocket.h  test_AdminEndpoints.cpp  test_HttpClient.cpp  test_HttpCoverage.cpp  test_HttpPool.cpp  test_HttpServer.cpp  test_NXBroadcast.cpp  test_NetworkThread.cpp  test_PlatformSocket.cpp  test_ProxyProtocol.cpp  test_RFC9110.cpp  test_RFC9112.cpp  test_RateLimiter.cpp  test_RestRouter.cpp  test_SSE.cpp  test_TrustedProxyList.cpp  test_WebSocket.cpp  test_WebSocketServer.cpp
tests/platform/: test_Poll.cpp  test_Socket.cpp
tests/render/: test_AnimationPlayer.cpp  test_Layer.cpp  test_MeshAsset.cpp  test_StateBuffer.cpp  test_TextMeshBuilder.cpp  test_TextRendererLayout.cpp  test_Transform.cpp  test_TransformAnimator.cpp
tests/schemas/: test_SchemaGenerator.cpp  test_openapi.yaml
tests/sdl/: test_MusicAreaWidget.cpp
tests/stubs/: StubTexture.cpp
tests/ui/: test_UIManager.cpp
tests/utils/: test_Base64.cpp  test_BlendOps.cpp  test_Crypto.cpp  test_ImdsCredentialProvider.cpp  test_JsonSchema.cpp  test_JsonValidation.cpp  test_Log.cpp  test_PBKDF2.cpp  test_StringHelpers.cpp  test_UTF8.cpp
(+767 files in other folders)
